--- a/.env
+++ b/.env
@@ -26,3 +26,6 @@ APP_SECRET=7d84d32499d97428f5db8eeb4b74f9a2
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL="mysql://root@127.0.0.1:3306/snowtricks?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+###< symfony/mailer ###
