connexion avec mailhog & test

--- a/.env
+++ b/.env
@@ -27,5 +27,5 @@ APP_SECRET=7d84d32499d97428f5db8eeb4b74f9a2
 DATABASE_URL="mysql://root@127.0.0.1:3306/snowtricks?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
