--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,12 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+# routes.yaml
+app_trick_edit_video:
+    path: '/tricks/{id}/edit-video'
+    controller: 'App\Controller\TrickController::editVideo'
+app_trick_delete_video:
+    path: '/tricks/{id}/delete-video'
+    controller: 'App\Controller\TrickController::deleteVideo'
+
+    # routes.yaml
+app_tricks_edit_video_form:
+    path: '/tricks/{id}/edit-video-form'
+    controller: 'App\Controller\TrickController::editVideoForm'
