--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,8 @@ parameters:
     brochures_directory: '%kernel.project_dir%/public/uploads/brochures'
 
 services:
+    Symfony\Component\String\Slugger\SluggerInterface:
+        alias: slugger
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
